[gd_scene load_steps=2 format=3 uid="uid://ceqwlw2exiy5f"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_e0gbt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0gbt")

[node name="ServerButton" type="Button" parent="."]
layout_mode = 2
offset_left = 426.0
offset_top = 266.5
offset_right = 726.0
offset_bottom = 297.5
text = "Start as Host"

[node name="ClientButton" type="Button" parent="."]
layout_mode = 2
offset_left = 426.0
offset_top = 326.0
offset_right = 726.0
offset_bottom = 357.0
text = "Start as Client"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.5
offset_right = 150.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="ClientButton" to="." method="_on_client_button_pressed"]
